<resources>
    <string name="app_name">NCT2020</string>
    <string name="go">TO THE WORLD 여긴 NCT!</string>
    <string name="m">Members\nIntroduction</string>
    <string name="mm">NCT 2020 멤버 소개</string>
    <string name="a">Album\nIntroduction</string>
    <string name="aa">Resonance 앨범 소개</string>
    <string name="p">Play!</string>
    <string name="pp">Resonance 앨범 듣기</string>
    <string name="v">Music Video</string>
    <string name="vv">Resonance 뮤직비디오</string>
    <string name="mem">MEMBERS</string>
    <string name="taeil">태일(TAEIL)\n생일 | 1994년 6월 14일\n소속그룹 | NCT, NCT 127, NCT U</string>
    <string name="johnny">쟈니 (JOHNNY)\n생일 | 1995년 2월 9일\n소속그룹 | NCT, NCT 127</string>
    <string name="taeyong">태용 (TAEYONG)\n생일 | 1995년 7월 1일\n소속그룹 | NCT, NCT 127, SuperM</string>
    <string name="yuta">유타 (YUTA)\n생일 | 1995년 10월 26일\n소속그룹 | NCT, NCT 127</string>
    <string name="doyoung">도영 (DOYOUNG)\n생일 | 1996년 2월 1일\n소속그룹 | NCT, NCT 127, NCT U</string>
    <string name="ten">텐(TEN)\n생일 | 1996년 2월 27일\n소속그룹 | NCT, WayV, SuperM</string>
    <string name="jaehyun">재현(JAEHYUN)\n생일 | 1997년 2월 14일\n소속그룹 | NCT, NCT 127, NCT U</string>
    <string name="winwin">윈윈(WINWIN)\n생일 | 1997년 10월 28일\n소속그룹 | NCT, NCT 127, WayV</string>
    <string name="mark">마크(MARK)\n생일 | 1999년 8월 2일\n소속그룹 | NCT, NCT 127, SuperM</string>
    <string name="renjun">런쥔(RENJUN)\n생일 | 2000년 3월 23일\n소속그룹 | NCT, NCT DREAM</string>
    <string name="jeno">제노(JENO)\n생일 |  2000년 4월 23일\n소속그룹 | NCT, NCT DREAM</string>
    <string name="haechan">해찬(HAECHAN)\n생일 | 2000년 6월 6일\n소속그룹 | NCT, NCT DREAM, NCT 127</string>
    <string name="jaemin">재민(JAEMIN)\n생일 | 2000년 8월 13일\n소속그룹 | NCT, NCT DREAM</string>
    <string name="chenle">천러(CHENLE)\n생일 | 2001년 11월 22일\n소속그룹 | NCT, NCT DREAM</string>
    <string name="jisung">지성(JISUNG)\n생일 | 2002년 2월 5일\n소속그룹 | NCT, NCT DREAM</string>
    <string name="lucas">루카스(LUCAS)\n생일 | 1999년 1월 25일\n소속그룹 | NCT, WayV, SuperM</string>
    <string name="jungwoo">정우(JUNGWOO)\n생일 | 1998년 2월 19일\n소속그룹 | NCT, NCT 127</string>
    <string name="kun">쿤(KUN)\n생일 | 1996년 1월 1일\n 소속그룹 | NCT, WayV</string>
    <string name="xiaojun">샤오쥔(XIAOJUN)\n생일 | 1999년 8월 8일\n소속그룹 | NCT, WayV</string>
    <string name="yangyang">양양(YANGYANG)\n생일 | 2000년 10월 10일\n소속그룹 | NCT, WayV </string>
    <string name="hendery">헨드리(HENDERY)\n생일 | 1999년 9월 28일\n소속그룹 | NCT, WayV</string>
    <string name="shotaro">쇼타로(SHOTARO)\n생일 | 2000년 11월 25일\n소속그룹 | NCT</string>
    <string name="sungchan">성찬(SUNGCHAN)\n생일 | 2001년 9월 13일\n소속그룹 | NCT</string>
    <string name="album">ALBUM</string>
    <string name="as">NCT RESONANCE Pt. 1 - The 2nd Album\nNCT\n2020.10.12\n댄스, 랩/힙합, 알앤비/어반, 발라드</string>
    <string name="ase">‘NCT – The 2nd Album RESONANCE Pt.1‘ 발매!\nNCT의 다양한 조합+매력 만날 수 있는\n독보적인  음악 세계 선사!\n\n ‘NCT – The 2nd Album RESONANCE Pt.1‘은총 23명의\n멤버가 참여, 곡에 따라 다양한 멤버 조합을 선보이는\n연합팀 NCT U는 물론 NCT 127,NCT DREAM, WayV\n각 팀의 매력을 만날 수 있는 곡까지 다채로운\n음악이 수록되어 있다.\n\n</string>
    <string name="b">NCT RESONANCE Pt. 2 - The 2nd Album\nNCT\n2020.11.23\n댄스, 알앤비/어반, 발라드, 랩/힙합,\n일렉트로니카</string>
    <string name="bb">‘NCT – The 2nd Album RESONANCE Pt.2‘ 공개!\n\n‘NCT – The 2nd Album RESONANCE Pt.2‘는 신곡 90‘s Love와 Work It을 비롯해 새롭게 수록된 8개 트랙에 정규 2집 Pt.1으로 선보인 13곡까지 총 21개 트랙으로 구성되어, NCT의 한층 풍성한 음악을 만끽하기에 충분하다.\n\n\n\n\n\n\n</string>


    <string name="songs">SONGS</string>
    <string name="love">1. 90‘s Love</string>
    <string name="lovep">참여 멤버:텐 윈윈 마크 제노 해찬 양양 성찬</string>
    <string name="mis">2. Misfit</string>
    <string name="misp">참여 멤버: 쟈니 태용 마크 헨드리 양양 제노 성찬</string>
    <string name="roof">3. Raise The Roof</string>
    <string name="roofp">참여 멤버: 태일 쟈니 유타 쿤 정우 헨드리 런쥔 천러 지성</string>
    <string name="vol">4. Volcano</string>
    <string name="volp">참여 멤버: 태용 재현 도영 윈윈 정우 루카스 마크</string>
    <string name="bulb">5. 백열등\n(Light Bulb)</string>
    <string name="bulbp">참여 멤버: 태용 도영 쿤 성찬</string>
    <string name="rain">6. Dancing In The Rain</string>
    <string name="rainp">참여 멤버: 태일 쟈니 유타 쿤 재현 정우 샤오쥔 천러</string>
    <string name="my">7. My Everything</string>
    <string name="myp">참여 멤버: 태일 런쥔 샤오쥔</string>
    <string name="past">8. Interlude: Past to Present</string>
    <string name="wish">9. Make A Wish </string>
    <string name="wishp">참여 멤버: 태용 도영 재현 루카스 샤오쥔 재민 쇼타로</string>
    <string name="deja">10. 무대로 (Deja Vu)</string>
    <string name="dejap">참여 멤버: NCT DREAM(마크 런쥔 제노 해찬 재민 천러 지성)</string>
    <string name="wayv">11. Nectar</string>
    <string name="wayvp">참여 멤버: WayV(쿤 텐 윈윈 루카스 샤오쥔 헨드리 양양)</string>
    <string name="music">12. Music, Dance</string>
    <string name="musicp">참여 멤버: NCT 127(태일 쟈니 태용 유타 도영 재현 마크 해찬)</string>
    <string name="piano">13. 피아노 (Faded In My Last Song)</string>
    <string name="pianop">참여 멤버: 태일 쟈니 유타 텐 루카스 런쥔 해찬 지성</string>
    <string name="home">14. From Home</string>
    <string name="homep">참여 멤버: 태일 유타 도영 쿤 런쥔 해찬 천러</string>
    <string name="homek">15. From Home (Kor)</string>
    <string name="homekp">참여 멤버: 태일 유타 도영 쿤 런쥔 해찬 천러</string>
    <string name="wishe">16. Make A Wish (Eng)</string>
    <string name="wishep">참여 멤버: 태용 도영 재현 루카스 샤오쥔 재민 쇼타로</string>
    <string name="present">17. Interlude : Present to Future</string>
    <string name="it">18. Work It</string>
    <string name="itp">참여 멤버: 쟈니 유타 텐 정우 헨드리 재민 지성</string>
    <string name="aby">19. 단잠 (All About You)</string>
    <string name="abyp">참여 멤버: 재현 정우 마크 헨드리 쇼타로 성찬 천러</string>
    <string name="iou">20. I.O.U</string>
    <string name="ioup">참여 멤버: 태용 도영 쿤 양양 쇼타로 천러 지성</string>
    <string name="outro">21. Outro : Dream Routine</string>

    <string name="musicvideo">MUSIC VIDEO \n &amp; TRACK VIDEO</string>

    <string name="reson">RESONANCE</string>
    <string name="lovev">90‘s Love</string>
    <string name="work">Work It</string>
    <string name="wisht">Make A Wish\n(Birthday song)</string>
    <string name="fromhome">From Home</string>
    <string name="misfit">Misfit</string>
    <string name="mudaero">Déjà Vu; 舞代路</string>
    <string name="empty">빈칸입니다</string>
</resources>