<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nctmainbg"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="480dp"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewM"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_weight="1"
            android:onClick="onClickText"
            android:fontFamily="@font/messapiabold"
            android:text="@string/m"
            android:textColor="#fff"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textViewMm"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/mm"
            android:textColor="#fff"
            android:textSize="20sp"
            android:fontFamily="@font/messapiabold"/>

        <TextView
            android:id="@+id/textViewA"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_weight="1"
            android:onClick="onClickText"
            android:text="@string/a"
            android:textColor="#fff"
            android:textSize="30sp"
            android:fontFamily="@font/messapiabold" />

        <TextView
            android:id="@+id/textViewAa"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/aa"
            android:textColor="#fff"
            android:textSize="20sp"
            android:fontFamily="@font/messapiabold"/>

        <TextView
            android:id="@+id/textViewP"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:onClick="onClickText"
            android:fontFamily="@font/messapiabold"
            android:text="@string/p"
            android:textColor="#fff"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textViewPp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/pp"
            android:textColor="#fff"
            android:textSize="20sp"
            android:fontFamily="@font/messapiabold"/>

        <TextView
            android:id="@+id/textViewV"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:onClick="onClickText"
            android:text="@string/v"
            android:textColor="#fff"
            android:textSize="30sp"
            android:fontFamily="@font/messapiabold" />

        <TextView
            android:id="@+id/textViewVv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/vv"
            android:textColor="#fff"
            android:textSize="20sp"
            android:fontFamily="@font/messapiabold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>