<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/nctmainbg">

    <TextView
        android:id="@+id/textView"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:textColor="#fff"
        android:textSize="20dp"
        android:fontFamily="@font/messapiabold"
        android:text="@string/album" />

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewP1"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:scaleType="fitStart"

                app:srcCompat="@drawable/part1" />

            <TextView
                android:id="@+id/textViewP1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical"
                android:textSize="10sp"
                android:textColor="#fff"
                android:fontFamily="@font/jeju"
                android:text="@string/as" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewP1e"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textColor="#fff"
            android:textSize="11sp"
            android:fontFamily="@font/jeju"
            android:text="@string/ase" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewP2"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/part2" />

            <TextView
                android:id="@+id/textViewP2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical"
                android:textSize="10sp"
                android:textColor="#fff"
                android:fontFamily="@font/jeju"
                android:text="@string/b" />
        </LinearLayout>
        <TextView
            android:id="@+id/textViewP2e"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="3dp"
            android:textColor="#fff"
            android:textSize="11sp"
            android:fontFamily="@font/jeju"
            android:text="@string/bb" />
    </LinearLayout>


</LinearLayout>